--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "3.4.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.1.1",
     "uuid": "^8.3.0"
   },
