--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "book_store",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
